# CDCS

./: .gitignore  .settings  1_2_3  Build_File  CHANGELOG.md  Cargo.toml  France_Trenchies _Dying.lua  LICENSE  README.md  cliff.toml  input.cdcs  map.json  out.cdcs  output.cdc
.github/workflows/: rust.yml
src/: common_traits.rs  err_traits.rs  main.rs  pop.rs  provinces.rs  template  ui.rs
src/graphics/: camera.rs  map.rs  map_shader.fs  map_shader.vs  mod.rs  tween.rs
src/ui_ext/: ask.rs  err.rs  file.rs  mod.rs  note.rs  ui.rs
src/ui_ext/popups/: ask.rs  err.rs  mod.rs  note.rs  provr.rs  settings.rs
