[package]
name = "CDCS"
version = "2.0.0-alpha-1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
openfile="2.0.0"
random_color = "0.5.1"
fltk = { version = "1.1.11", features = ["enable-glwindow"] }
glium = { version = "0.29", default-features = false } # no need for glutin
image = "0.23.14"
nalgebra-glm = "0.15.0"
serde_json = "1.0.66"
serde = "1.0.127"
serde_derive = "1.0.127"

